# radarlib

./: .copr.enc  .gitignore  .travis-build.sh  .travis.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  configure.ac  radarlib.pc.in  radarlib.spec  readme.txt  regole.txt  simplemakefile
debian/: changelog  control  copyright  libradar-dev.docs  libradar-dev.install  libradar1.install  libradar1.shlibs  rules
doc/: Doxyfile.in  FAQ.dox  Makefile.am  mainpage.dox
examples/: Makefile.am  copy_polar_volume_attributes.cpp  create_delete.cpp  create_odim_object.cpp  create_polar_volume.cpp  dump_object.cpp  image-visitor.cpp  odimh5scanner.cpp  prove_hdf5.cpp  pvolsplitter.cpp  read_attributes.cpp  read_polar_volume.cpp  read_polar_volume2.cpp  read_polar_volume_scans.cpp  visitor.cpp  write_attributes.cpp
fedora/: radarlib.spec
fedora/SPECS/: radarlib.spec
radarlib/: Makefile.am  base64.cpp  base64.hpp  byteorder.h  debug.hpp  defs.h  formula.hpp  io.cpp  io.hpp  lib.cpp  lib.hpp  math.hpp  odimh5v20.hpp  odimh5v20_arpav10.hpp  odimh5v20_arpav10_classes.cpp  odimh5v20_arpav10_classes.hpp  odimh5v20_classes.cpp  odimh5v20_classes.hpp  odimh5v20_const.cpp  odimh5v20_const.hpp  odimh5v20_dump.cpp  odimh5v20_dump.hpp  odimh5v20_exceptions.cpp  odimh5v20_exceptions.hpp  odimh5v20_factory.cpp  odimh5v20_factory.hpp  odimh5v20_format.hpp  odimh5v20_hdf5.cpp  odimh5v20_hdf5.hpp  odimh5v20_metadata.cpp  odimh5v20_metadata.hpp  odimh5v20_support.cpp  odimh5v20_support.hpp  odimh5v20_utils.cpp  odimh5v20_utils.hpp  odimh5v21.hpp  odimh5v21_arpav10.hpp  odimh5v21_arpav10_classes.cpp  odimh5v21_arpav10_classes.hpp  odimh5v21_classes.cpp  (+24 more)
test/: Makefile.am  test-create-ETOP.cc  test-create-IMAGE.cc  test-create-PROD.cc  test-create-PVOL.cc  test-odimh5v21-azangle.cc  test-odimh5v21-create-ETOP.cc  test-odimh5v21-create-IMAGE.cc  test-odimh5v21-create-PROD.cc  test-odimh5v21-create-PVOL.cc  test-odimh5v21-polar-volume.cc  test-odimh5v21-prod-splitter.cc  test-odimh5v21-read-product.cc  test-odimh5v21-support.cc  test-odimh5v21-visitor.cc  test-polar-volume.cc  test-prod-splitter.cc  test-support.cc  test-visitor.cc
vs2005/: radarlib.sln
vs2005/radarlib/: radarlib.vcproj
