dist_noinst_SCRIPTS = autogen.sh

libradar_includedir      = $(includedir)

nobase_libradar_include_HEADERS = \
				  radarlib/radar.hpp \
				  radarlib/odimh5v20_arpav10_classes.hpp \
				  radarlib/odimh5v20_arpav10.hpp \
				  radarlib/odimh5v20_classes.hpp \
				  radarlib/odimh5v20_const.hpp \
				  radarlib/odimh5v20_dump.hpp \
				  radarlib/odimh5v20_exceptions.hpp \
				  radarlib/odimh5v20_factory.hpp \
				  radarlib/odimh5v20_format.hpp \
				  radarlib/odimh5v20_hdf5.hpp \
				  radarlib/odimh5v20.hpp \
				  radarlib/odimh5v20_metadata.hpp \
				  radarlib/odimh5v20_support.hpp \
				  radarlib/base64.hpp \
				  radarlib/byteorder.h \
				  radarlib/debug.hpp \
				  radarlib/defs.h \
				  radarlib/formula.hpp \
				  radarlib/io.hpp \
				  radarlib/lib.hpp \
				  radarlib/math.hpp \
				  radarlib/string.hpp \
				  radarlib/time.hpp

pkgconfigdir = $(libdir)/pkgconfig

pkgconfig_DATA = radarlib.pc

EXTRA_DIST = \
	     OPERA_2008_03_WP2.1a_InformationModel_UML_2.0.pdf \
	     readme.txt \
	     regole.txt 

SUBDIRS = radarlib test doc examples









