dist_doc_DATA =  \
		 copy_polar_volume_attributes.cpp \
		 create_delete.cpp \
		 create_odim_object.cpp \
		 create_polar_volume.cpp \
		 dump_object.cpp \
		 odimh5scanner.cpp \
		 prove_hdf5.cpp \
		 pvolsplitter.cpp \
		 read_attributes.cpp \
		 read_polar_volume2.cpp \
		 read_polar_volume.cpp \
		 read_polar_volume_scans.cpp \
		 write_attributes.cpp
