lib_LTLIBRARIES = libradar.la

libradar_la_CPPFLAGS = -I$(top_srcdir) -I$(top_builddir)

libradar_la_LDFLAGS = -version-info $(PACKAGE_LT_VERSION)

libradar_la_SOURCES = \
		      odimh5v20_arpav10_classes.cpp \
		      odimh5v20_classes.cpp \
		      odimh5v20_const.cpp \
		      odimh5v20_dump.cpp \
		      odimh5v20_exceptions.cpp \
		      odimh5v20_factory.cpp \
		      odimh5v20_hdf5.cpp \
		      odimh5v20_metadata.cpp \
		      odimh5v20_support.cpp \
		      odimh5v20_utils.cpp \
		      odimh5v21_arpav10_classes.cpp \
		      odimh5v21_classes.cpp \
		      odimh5v21_const.cpp \
		      odimh5v21_dump.cpp \
		      odimh5v21_exceptions.cpp \
		      odimh5v21_factory.cpp \
		      odimh5v21_hdf5.cpp \
		      odimh5v21_metadata.cpp \
		      odimh5v21_support.cpp \
		      odimh5v21_utils.cpp \
		      base64.cpp \
		      io.cpp \
		      lib.cpp \
		      string.cpp \
		      time.cpp

noinst_LTLIBRARIES = libradar_static.la

libradar_static_la_CPPFLAGS = -I$(top_srcdir) -I$(top_builddir)

libradar_static_la_LDFLAGS = -version-info $(PACKAGE_LT_VERSION)

libradar_static_la_SOURCES = \
			     odimh5v20_arpav10_classes.cpp \
			     odimh5v20_classes.cpp \
			     odimh5v20_const.cpp \
			     odimh5v20_dump.cpp \
			     odimh5v20_exceptions.cpp \
			     odimh5v20_factory.cpp \
			     odimh5v20_hdf5.cpp \
			     odimh5v20_metadata.cpp \
			     odimh5v20_support.cpp \
			     odimh5v20_utils.cpp \
			     odimh5v21_arpav10_classes.cpp \
			     odimh5v21_classes.cpp \
			     odimh5v21_const.cpp \
			     odimh5v21_dump.cpp \
			     odimh5v21_exceptions.cpp \
			     odimh5v21_factory.cpp \
			     odimh5v21_hdf5.cpp \
			     odimh5v21_metadata.cpp \
			     odimh5v21_support.cpp \
			     odimh5v21_utils.cpp \
			     base64.cpp \
			     io.cpp \
			     lib.cpp \
			     string.cpp \
			     time.cpp
